# Kinemo

./: .gitignore  .gitmodules  CMakeLists.txt  KinemoEngine.sln  LICENSE
Engine/: Engine.vcxproj  Engine.vcxproj.filters
Engine/src/: Core.h  GameObject.h  Kinemo.h  Layer.h  LayerStack.cpp  LayerStack.h
Engine/src/app/: Application.cpp  Input.h  (+4 more)
Game/: Game.vcxproj  Game.vcxproj.filters
Game/src/: Game.cpp  Player.h
engine/: CMakeLists.txt  CMakeSources.cmake
engine/dependencies/FreeType/lib/: freetype.lib
engine/dependencies/SOIL/lib/: SOIL.lib
engine/dependencies/glad/include/glad/: glad.h
engine/dependencies/glad/src/: glad.c
engine/dependencies/stb_image/: CMakeLists.txt
engine/src/: Camera.cpp  Camera.h  Core.h  EntityManager.h  Kinemo.h  KinemoLua.h  KinemoTypes.h  OrthographicCameraController.cpp  OrthographicCameraController.h
engine/src/app/: Application.cpp  Application.h  Input.cpp  Input.h  InputManager.h  Window.cpp  Window.h
engine/src/core/: Camera.cpp  Camera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Scene.h
engine/src/events/: Event.h  EventManager.h  IEventListener.h
engine/src/gameobject/: GameObject.h
engine/src/graphics/: Color.cpp  Color.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  Grid.h  Renderable2D.cpp  Renderable2D.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  SimpleRenderer2D.cpp  Sprite.cpp  Sprite.h  TextRenderer.cpp  TextRenderer.h  Texture2D.cpp  Texture2D.h
engine/src/graphics/api/: VertexArray.cpp  VertexArray.h  VertexBuffer.h
engine/src/graphics/gui/: Button.h  Label.h  Texture.cpp  Texture.h  Widget.h
engine/src/graphics/layers/: Layer.cpp  Layer.h  Layer2D.cpp  Layer2D.h  LayerStack.cpp  LayerStack.h
engine/src/lua/: Lua.cpp  Lua.h  LuaBindings.h  LuaComponent.h  LuaInput.cpp  LuaInput.h  LuaPhysics.cpp  LuaPhysics.h  LuaRenderer2D.cpp  LuaRenderer2D.h  LuaTexture2D.cpp  LuaTexture2D.h  Lua_EntityManager.h  Lua_Input.h  Lua_Renderer2D.h  Lua_Texture2D.h
engine/src/lua/lib/: Component.lua  GameObject.lua  Vec2.lua
engine/src/math/: Mat2.cpp  Mat2.h  Mat4.cpp  Mat4.h  Math.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.h
engine/src/physics/: BoundingBox.cpp  BoundingBox.h  Physics.cpp  Physics.h
engine/src/platform/opengl/: GLTexture2D.cpp  GLTexture2D.h
engine/src/platform/windows/: WindowsInput.h  WindowsWindow.h
engine/src/system/: IAllocator.cpp  LinearAllocator.h  VirtualFileSystem.cpp  VirtualFileSystem.h
engine/src/utils/: FileUtilities.h  Log.cpp  Log.h  Timer.cpp  Timer.h
examples/: CMakeLists.txt
examples/example_framebuffers/: CMakeLists.txt
sandbox/: CMakeLists.txt
sandbox/src/: Game.cpp  Sandbox2D.cpp  Sandbox2D.h
(+52 files in other folders)
